test/good/sets/empty02.px

{Float} a = {}
print a.empty
