test/bad/sets/decl02.px

a = {1/2}
a': {Float} = a
